@@ -19,6 +19,10 @@ def setup_module(module):
     print("setup_module    module:%s" % module.__name__)
     TestEnv.init()
     TestEnv.APACHE_CONF_SRC = "data/test_auto"
+    TestEnv.check_acme()
+    TestEnv.clear_store()
+    TestEnv.install_test_conf();
+    assert TestEnv.apache_start() == 0
     
 def teardown_module(module):
     print("teardown_module module:%s" % module.__name__)
@@ -35,16 +39,11 @@ class TestAuto:
 
     def setup_method(self, method):
         print("setup_method: %s" % method.__name__)
-        TestEnv.check_acme()
         TestEnv.clear_store()
         TestEnv.install_test_conf();
-        assert TestEnv.apache_start() == 0
-
 
     def teardown_method(self, method):
         print("teardown_method: %s" % method.__name__)
-        assert TestEnv.apache_stop() == 0
-
 
     def test_700_001(self):
         # create a MD not used in any virtual host
@@ -166,17 +165,17 @@ class TestAuto:
         domain = "a004-" + TestAuto.dns_uniq
         dnsList = [ domain, "www." + domain ]
 
-        # setup: generate config with one md, one vhost
-        assert TestEnv.apache_stop() == 0
-        conf = HttpdConf(TestAuto.TMP_CONF, sslOnly=True)
+        # setup: generate config with one md, one vhost, only tls challenge
+        conf = HttpdConf(TestAuto.TMP_CONF)
         conf.add_admin("admin@" + domain)
         conf.add_drive_mode("auto")
+        conf.add_ca_challenges([ "tls-sni-01" ])
         conf.add_md(dnsList)
         conf.add_vhost(TestEnv.HTTPS_PORT, domain, aliasList=[ dnsList[1] ], withSSL=True)
         conf.install()
 
         # - restart (-> drive), check that md is in store
-        assert TestEnv.apache_restart( checkWithSSL=True ) == 0
+        assert TestEnv.apache_restart() == 0
         self._check_md_names(domain, dnsList)
         self._wait_for_state_change([ domain ], 30)
         self._check_md_cert(dnsList)
